--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
 	<h1>Наша первая страничка</h1>
-	<P>Приложим картинку:</P> 
+	<P>Приложим картинку ламы:</P> 
     <img src="6.jpg" alt="ура">
   </body>
 </html>
