--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>тест</title>
   </head>
   <body>
-	<h1>Наша первая страничка</h1>
+	<h1>Всем привет! Это лама на фоне города Мачу-Пикчу!</h1>
 	<P>Приложим картинку ламы:</P> 
     <img src="6.jpg" alt="ура">
   </body>
