--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
 	<h1>Всем привет! Это лама на фоне города Мачу-Пикчу!</h1>
-	<P>Приложим картинку ламы:</P> 
+	<P>Посмотрите как красиво:</P> 
     <img src="6.jpg" alt="ура">
   </body>
 </html>
